[package]
name = "breez_sdk_spark_flutter"
version = "0.1.3"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-trait = "0.1.88"
# Replaced with release commit during publishing
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk.git", rev = "861283e3442215cd07cabff6959a1790024fe2f5", features = ["openssl-vendored"] }
extend = "1.2.0"
flutter_rust_bridge = "=2.9.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Support for 16KB page sizes on Android 15+ 64-bit architectures
[target.aarch64-linux-android]
rustflags = [
    "-C", "link-arg=-Wl,--hash-style=both",
    "-C", "link-arg=-Wl,-z,max-page-size=16384",
]

[target.x86_64-linux-android]
rustflags = [
    "-C", "link-arg=-Wl,--hash-style=both",
    "-C", "link-arg=-Wl,-z,max-page-size=16384",
]